--- a/Resources/Base.lproj/DOSBox.strings
+++ b/Resources/Base.lproj/DOSBox.strings
@@ -51,6 +51,45 @@ You can also omit [34;1mconfig -get [section][0m entirely:
 "PROGRAM_CONFIG_SECURE_DISALLOW" = "That operation is not permitted in secure mode.
 ";
 
+"PROGRAM_CONFIG_MISSINGPARAM" = "Missing parameter.
+";
+
+"PROGRAM_CONFIG_FILE_WHICH" = "Writing config file %s
+";
+
+"PROGRAM_CONFIG_HLP_PROPHLP" = "Purpose of property \"%s\" (contained in section \"%s\"):
+%s
+
+Possible Values: %s
+Default value: %s
+Current value: %s
+
+";
+
+"PROGRAM_CONFIG_HLP_LINEHLP" = "Purpose of section \"%s\":
+%s
+Current value:
+%s
+";
+
+"PROGRAM_CONFIG_HLP_NOCHANGE" = "This property cannot be changed at runtime.
+";
+
+"PROGRAM_CONFIG_HLP_POSINT" = "positive integer
+";
+
+"PROGRAM_CONFIG_HLP_SECTHLP" = "Section %s contains the following properties:
+";
+
+"PROGRAM_CONFIG_HLP_SECTLIST" = "DOSBox configuration contains the following sections:
+";
+
+"PROGRAM_CONFIG_SET_SYNTAX" = "Correct syntax: config -set \"section property\".
+";
+
+"PROGRAM_CONFIG_PRINT_STARTUP" = "DOSBox was started with the following command line parameters:
+%s
+";
 
 //MOUNT-related strings
 //---------------------
@@ -227,13 +266,13 @@ To boot from a hard disk image, it must first be mounted with the
 
 "PROGRAM_IMGMOUNT_SPECIFY_DRIVE" = "Makes the contents of an ISO/CUE/IMG disk image into a DOS drive.
 
-Usage:   [34;1mimgmount [DOS drive letter] [\"Path/to/image.iso\"] -t [hdd/floppy/cdrom][0m
-Example: [32;1mimgmount d \"/Users/yourname/Desktop/Game.iso\" -t cdrom[0m will mount
+Usage:   [34;1mimgmount [DOS drive letter] [\"Path/to/image.iso\"] -t [hdd/floppy/iso][0m
+Example: [32;1mimgmount d \"/Users/yourname/Desktop/Game.iso\" -t iso[0m will mount
 the Game.iso disk image as the D: drive.
 
 You can specify what kind of drive to use by adding the [34;1m-t[0m parameter:
 [32;1m-t hdd[0m mounts it as a hard disk.
-[32;1m-t cdrom[0m mounts it as a CD-ROM.
+[32;1m-t iso[0m mounts it as a CD-ROM.
 [32;1m-t floppy[0m mounts it as a floppy disk.
 ";
 
@@ -267,7 +306,7 @@ cyl = Number of cylinders
 ";
 
 "PROGRAM_IMGMOUNT_TYPE_UNSUPPORTED" = "Image type %s was not recognised.
-Supported types are [32;1mhdd[0m, [32;1mfloppy[0m and [32;1mcdrom[0m.
+Supported types are [32;1mhdd[0m, [32;1mfloppy[0m and [32;1miso[0m.
 ";
 
 "PROGRAM_IMGMOUNT_FORMAT_UNSUPPORTED" = "Format %s was not recognised.
@@ -276,8 +315,8 @@ Supported formats are [32;1mfat[0m, [32;1iso[0m and [32;1none[0m.
 
 "PROGRAM_IMGMOUNT_SPECIFY_FILE" = "Please specify the image file you want to mount.
 
-Usage:   [34;1mimgmount [DOS drive letter] [\"Path/to/image.iso\"] -t [hdd/floppy/cdrom][0m
-Example: [32;1mimgmount d \"/Users/yourname/Game.iso\" -t cdrom[0m will mount
+Usage:   [34;1mimgmount [DOS drive letter] [\"Path/to/image.iso\"] -t [hdd/floppy/iso][0m
+Example: [32;1mimgmount d \"/Users/yourname/Game.iso\" -t iso[0m will mount
 the Game.iso disk image as the D: drive.
 ";
 
@@ -463,10 +502,11 @@ in the [1;32mDrives[0m menu.
 
 ";
 
-"SHELL_STARTUP_CGA" = "
+"SHELL_STARTUP_CGA" = "  Use [31mF12[37m to set composite output ON, OFF, or AUTO (default).
+  [31m(Alt-)F11[37m changes hue; [31mctrl-alt-F11[37m selects early/late CGA model.
 ";
 
-"SHELL_STARTUP_HERC" = "
+"SHELL_STARTUP_HERC" = "  Use [31mF11[37m to cycle through white, amber, and green monochrome color.
 ";
 
 "SHELL_STARTUP_DEBUG" = "
@@ -475,6 +515,8 @@ in the [1;32mDrives[0m menu.
 "SHELL_STARTUP_END" = "[30m════════════════════════════════ [0;37mHappy gaming![30;1m ═════════════════════════════════[0m
 ";
 
+"SHELL_STARTUP_SUB" = "[32;1mDOSBox %s Command Shell[0m
+";
 
 //Shell-command help messages
 //---------------------------
@@ -639,6 +681,24 @@ starting from 1.
 "SHELL_CMD_VER_VER" = "DOSBox version %s. Reported DOS version %d.%d.
 ";
 
+"SHELL_CMD_DATE_HELP" = "Displays or changes the internal date.
+";
+
+"SHELL_CMD_DATE_HELP_LONG" = "DATE [[/T] [/H] [/S] | MM-DD-YYYY]
+  MM-DD-YYYY: new date to set
+  /S:         Permanently use host time and date as DOS time
+  /F:         Switch back to DOSBox internal time (opposite of /S)
+  /T:         Only display date
+  /H:         Synchronize with host
+";
+
+"SHELL_CMD_TIME_HELP" = "Displays the internal time.
+";
+
+"SHELL_CMD_TIME_HELP_LONG" = "TIME [/T] [/H]
+  /T:         Display simple time
+  /H:         Synchronize with host
+";
 
 // SUBST-related messages
 // ----------------------
@@ -659,4 +719,130 @@ Example: [32;1msubst d c:/games[0m will make drive D display
 ";
 
 "SHELL_CMD_SUBST_NO_REMOVE" = "Removing a drive is not supported.
+";
+
+// TIME-related messages
+// ---------------------
+
+"SHELL_CMD_TIME_NOW" = "Current time: 
+";
+
+// DATE-related messages
+// ---------------------
+
+"SHELL_CMD_DATE_ERROR" = "The specified date is not correct.
+";
+
+"SHELL_CMD_DATE_DAYS" = "3SunMonTueWedThuFriSat
+";
+
+"SHELL_CMD_DATE_NOW" = "Current date: 
+";
+
+"SHELL_CMD_DATE_SETHLP" = "Type 'date MM-DD-YYYY' to change.
+";
+
+"SHELL_CMD_DATE_FORMAT" = "M/D/Y
+";
+
+// LOADROM-related messages
+// ------------------------
+
+"PROGRAM_LOADROM_BASIC_LOADED" = "BASIC ROM loaded.
+";
+
+"PROGRAM_LOADROM_UNRECOGNIZED" = "ROM file not recognized.
+";
+
+"PROGRAM_LOADROM_INCOMPATIBLE" = "Video BIOS not supported by machine type.
+";
+
+"PROGRAM_LOADROM_TOO_LARGE" = "ROM file too large.
+";
+
+"PROGRAM_LOADROM_CANT_OPEN" = "ROM file not accessible.
+";
+
+"PROGRAM_LOADROM_SPECIFY_FILE" = "Must specify ROM file to load.
+";
+
+// LOADROM-related messages
+// ------------------------
+
+"PROGRAM_INTRO" = "[2J[32;1mWelcome to DOSBox[0m, an x86 emulator with sound and graphics.
+DOSBox creates a shell for you which looks like old plain DOS.
+
+For information about basic mount type [34;1mintro mount[0m
+For information about CD-ROM support type [34;1mintro cdrom[0m
+For information about special keys type [34;1mintro special[0m
+For more information about DOSBox, go to [34;1mhttp://www.dosbox.com/wiki[0m
+
+[31;1mDOSBox will stop/exit without a warning if an error occurred![0m
+";
+
+"PROGRAM_INTRO_MOUNT_START" = "[32;1mHere are some commands to get you started:[0m
+Before you can use the files located on your own filesystem,
+You have to mount the directory containing the files.
+";
+
+"PROGRAM_INTRO_MOUNT_OTHER" = "[44;1m╔══════════════════════════════════════════════════════════════════════╗
+║ [32mmount c ~/dosgames[37m will create a C drive with ~/dosgames as contents.║
+║                                                                      ║
+║ [32m~/dosgames[37m is an example. Replace it with your own games directory.[37m  ║
+╚══════════════════════════════════════════════════════════════════════╝[0m
+";
+
+"PROGRAM_INTRO_MOUNT_END" = "When the mount has successfully completed you can type [34;1mc:[0m to go to your freshly
+mounted C-drive. Typing [34;1mdir[0m there will show its contents. [34;1mcd[0m will allow you to
+enter a directory (recognised by the [33;1m[][0m in a directory listing).
+You can run programs/files which end with [31m.exe .bat[0m and [31m.com[0m.
+";
+
+"PROGRAM_INTRO_CDROM" = "[2J[32;1mHow to mount a Real/Virtual CD-ROM Drive in DOSBox:[0m
+DOSBox provides CD-ROM emulation on several levels.
+
+The [33mbasic[0m level works on all CD-ROM drives and normal directories.
+It installs MSCDEX and marks the files read-only.
+Usually this is enough for most games:
+[34;1mmount d [0;31mD:\[34;1m -t cdrom[0m   or   [34;1mmount d C:\example -t cdrom[0m
+If it doesn't work you might have to tell DOSBox the label of the CD-ROM:
+[34;1mmount d C:\example -t cdrom -label CDLABEL[0m
+
+The [33mnext[0m level adds some low-level support.
+Therefore only works on CD-ROM drives:
+[34;1mmount d [0;31mD:\[34;1m -t cdrom -usecd [33m0[0m
+
+The [33mlast[0m level of support depends on your Operating System:
+For [1mWindows 2000[0m, [1mWindows XP[0m and [1mLinux[0m:
+[34;1mmount d [0;31mD:\[34;1m -t cdrom -usecd [33m0 [34m-ioctl[0m
+For [1mWindows 9x[0m with a ASPI layer installed:
+[34;1mmount d [0;31mD:\[34;1m -t cdrom -usecd [33m0 [34m-aspi[0m
+
+Replace [0;31mD:\[0m with the location of your CD-ROM.
+Replace the [33;1m0[0m in [34;1m-usecd [33m0[0m with the number reported for your CD-ROM if you type:
+[34;1mmount -cd[0m
+";
+
+"PROGRAM_INTRO_SPECIAL" = "[2J[32;1mSpecial keys:[0m
+These are the default keybindings.
+They can be changed in the [33mkeymapper[0m.
+
+[33;1mALT-ENTER[0m   : Go full screen and back.
+[33;1mALT-PAUSE[0m   : Pause DOSBox.
+[33;1mCTRL-F1[0m     : Start the [33mkeymapper[0m.
+[33;1mCTRL-F4[0m     : Update directory cache for all drives! Swap mounted disk-image.
+[33;1mCTRL-ALT-F5[0m : Start/Stop creating a movie of the screen.
+[33;1mCTRL-F5[0m     : Save a screenshot.
+[33;1mCTRL-F6[0m     : Start/Stop recording sound output to a wave file.
+[33;1mCTRL-ALT-F7[0m : Start/Stop recording of OPL commands.
+[33;1mCTRL-ALT-F8[0m : Start/Stop the recording of raw MIDI commands.
+[33;1mCTRL-F7[0m     : Decrease frameskip.
+[33;1mCTRL-F8[0m     : Increase frameskip.
+[33;1mCTRL-F9[0m     : Kill DOSBox.
+[33;1mCTRL-F10[0m    : Capture/Release the mouse.
+[33;1mCTRL-F11[0m    : Slow down emulation (Decrease DOSBox Cycles).
+[33;1mCTRL-F12[0m    : Speed up emulation (Increase DOSBox Cycles).
+[33;1mALT-F12[0m     : Unlock speed (turbo button/fast forward).
+
+[31;1mNOTE[0m: These may be different under Boxer!
 ";
