--- a/Resources/es.lproj/Localizable.strings
+++ b/Resources/es.lproj/Localizable.strings
@@ -818,3 +818,15 @@ Por favor arrastre las nuevas ROMs para reemplazarlas.";
 
 /* Explanatory message shown in Keyboard Preferences if Boxer is not able to install its hotkey capture event tap on OS X 10.8 and below. %1$@ is the localized name of the Accessibility preferences pane. */
 "“Enable access for assistive devices” must also\n be enabled in OS X’s %1$@ preferences." = "“Activar acceso para dispositivos de asistencia” debe estar también activado en preferencias %1$@ de OS X.";
+
+/* A DOSBox configuration file was provided that defines drives with paths that cannot be found. */
+//"A DOSBox configuration file was provided that defines drives with paths that cannot be found." = "A DOSBox configuration file was provided that defines drives with paths that cannot be found.";
+
+/* Unsupported state */
+//"Unsupported state" = "Unsupported state";
+
+/* Explanatory message when an unsupported state was requested. */
+//"The current session does not support game states. (e.g. no gamebox is present.)" = "The current session does not support game states. (e.g. no gamebox is present.)";
+
+/* Localized description for when a requested URL cannot be opened from within DOS. */
+//"URL not reachable in DOS" = "URL not reachable in DOS";
