--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -822,3 +822,5 @@
 
 /* Localized description for when a requested URL cannot be opened from within DOS. */
 "URL not reachable in DOS" = "URL not reachable in DOS";
+
+"Unable to decode drive, encoding version %ld is higher than supported version %ld." = "Unable to decode drive, encoding version %1$ld is higher than supported version %1$ld.";
