--- a/Resources/cs.lproj/Localizable.strings
+++ b/Resources/cs.lproj/Localizable.strings
@@ -787,7 +787,7 @@ Přetáhněte sem prosím náhradní ROM.";
 "“%1$@” does not contain any suitable MT-32 ROMs." = "“%1$@” neobsahuje žádné vhodné ROM MT-32.";
 
 /* Error message shown after choosing a reserved folder as the location for the DOS Games folder. %1$@ is the display name of the folder. */
-"“%1$@” is a special OS X folder and not suitable for storing your DOS games." = "“%1$@” je speciální složka OS X, která se nehodí k ukládání vašich DOSových her.";
+"\"%1$@\" is a special OS X folder and not suitable for storing your DOS games." = "“%1$@” je speciální složka macOS, která se nehodí k ukládání vašich DOSových her.";
 
 /* Bold error message shown when user attempts to add a PCM ROM that doesn't match an already-imported control ROM or vice-versa. %1$@ is the filename of the new ROM, and %2$@ is the proper term for that kind of ROM (control or PCM). */
 "“%1$@” is from a different MT-32 model than the existing %2$@." = "“%1$@” náleží k jinému modelu MT-32 než existující %2$@.";
