--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -35,7 +35,7 @@
 "%u%% throttle" = "%u%% throttle";
 
 /* Additional help displayed below hotkey capture toggle on Keyboard Preferences pane. */
-"(If an F1, F2 etc. key still behaves as an OS X hotkey, then hold down Fn while pressing the key.)" = "(If an F1, F2 etc. key still behaves as an OS X hotkey, then hold down Fn while pressing the key.)";
+"(If an F1, F2 etc. key still behaves as an OS X hotkey, then hold down Fn while pressing the key.)" = "(If an F1, F2 etc. key still behaves as a macOS hotkey, then hold down Fn while pressing the key.)";
 
 /* Status text shown in print status panel when a single page has been prepared. */
 "1 page is ready to print." = "1 page is ready to print.";
@@ -291,10 +291,10 @@
 "Finish Importing" = "Finish Importing";
 
 /* Bold text of alert shown if the application is not yet trusted for accessibility access on 10.9 and above. %1$@ is the name of the application; %2$@ is the localized title of the Security & Privacy preferences pane. */
-"For the best experience, %1$@ needs accessibility control in OS X’s %2$@ preferences." = "For the best experience, %1$@ needs accessibility control in OS X’s %2$@ preferences.";
+"For the best experience, %1$@ needs accessibility control in OS X's %2$@ preferences." = "For the best experience, %1$@ needs accessibility control in macOS’s %2$@ preferences.";
 
 /* Bold text of alert shown if the user does not have 'Allow access for assistive devices' enabled in OS X 10.8 and below. %1$@ is the localized name of the Accessibility preferences pane. */
-"For the best experience, turn on “Enable access for assistive devices” in OS X’s %1$@ preferences." = "For the best experience, turn on “Enable access for assistive devices” in OS X’s %1$@ preferences.";
+"For the best experience, turn on \"Enable access for assistive devices\" in macOS's %1$@ preferences." = "For the best experience, turn on “Enable access for assistive devices” in macOS’ %1$@ preferences.";
 
 /* Heading for game documentation in help menu for standalone game bundles. */
 "Game Documentation:" = "Game Documentation:";
@@ -318,7 +318,7 @@
 "If this continues to occur after relaunching, please send us an error report." = "If this continues to occur after relaunching, please send us an error report.";
 
 /* Informative text of warning sheet after importing a Mac application. */
-"If you cannot play this game in OS X, you may be able to play it in a Classic Mac OS emulator instead. For more help, click the ? button." = "If you cannot play this game in OS X, you may be able to play it in a Classic Mac OS emulator instead. For more help, click the ? button.";
+"If you cannot play this game in OS X, you may be able to play it in a Classic Mac OS emulator instead. For more help, click the ? button." = "If you cannot play this game in macOS, you may be able to play it in a Classic Mac OS emulator instead. For more help, click the ? button.";
 
 /* Informative text of confirmation sheet when closing a session that has active drive import operations. */
 "If you close now, the import will be cancelled." = "If you close now, the import will be cancelled.";
@@ -394,7 +394,7 @@
 "Included in Gamebox" = "Included in Gamebox";
 
 /* Recovery suggestion shown when user tries to mount a system folder as a DOS drive. */
-"Instead, choose one of your own folders, or a disc mounted in OS X." = "Instead, choose one of your own folders, or a disc mounted in OS X.";
+"Instead, choose one of your own folders, or a disc mounted in OS X." = "Instead, choose one of your own folders, or a disc mounted in macOS.";
 
 /* Explanatory text shown while the printer is idle. %1$@ is the localized name of the port the user should choose in DOS (e.g. “LPT1”.) %2$@ is the localized name of the paper type they should choose in DOS (e.g. “A4”, “Letter”.) */
 "Instruct your DOS program to print to %1$@ using %2$@ paper." = "Instruct your DOS program to print to %1$@ using %2$@ paper.";
@@ -433,7 +433,7 @@
 "MS-DOS is limited to a maximum of %1$d CD-ROM drives." = "MS-DOS is limited to a maximum of %1$d CD-ROM drives.";
 
 /* Error message shown when user tries to mount a system folder as a DOS drive. %@ is the requested folder path. */
-"MS-DOS is not permitted to access OS X system folders like “%@”." = "MS-DOS is not permitted to access OS X system folders like “%@”.";
+"MS-DOS is not permitted to access OS X system folders like “%@”." = "MS-DOS is not permitted to access macOS system folders like “%@”.";
 
 /* Menu item title for switching to the selected drive in DOS. */
 "Make Current Drive" = "Make Current Drive";
@@ -695,7 +695,7 @@
 "There is already another drive at the DOS drive letter %1$@." = "There is already another drive at the DOS drive letter %1$@.";
 
 /* Informative text of alert shown if the application is not yet trusted for accessibility access on 10.9 and above. %1$@ is the name of the application. */
-"This ensures that OS X hotkeys won’t interfere with %1$@’s game controls." = "This ensures that OS X hotkeys won’t interfere with %1$@’s game controls.";
+"This ensures that OS X hotkeys won't interfere with %1$@'s game controls." = "This ensures that macOS hotkeys won’t interfere with %1$@’s game controls.";
 
 /* Explanatory message shown in Keyboard Preferences if Boxer is not able to install its hotkey capture event tap on OS X 10.9 and up. %1$@ is the localized name of the Security & Privacy preferences pane. */
 "This feature requires Boxer to be given accessibility control in %1$@ Preferences." = "This feature requires Boxer to be given accessibility control in %1$@ Preferences.";
@@ -809,7 +809,7 @@
 "“%@” is not a valid joystick type." = "“%@” is not a valid joystick type.";
 
 /* Explanatory message shown in Keyboard Preferences if Boxer is not able to install its hotkey capture event tap on OS X 10.8 and below. %1$@ is the localized name of the Accessibility preferences pane. */
-"“Enable access for assistive devices” must also\n be enabled in OS X’s %1$@ preferences." = "“Enable access for assistive devices” must also\n be enabled in OS X’s %1$@ preferences.";
+"\"Enable access for assistive devices\" must also\n be enabled in OS X's %1$@ preferences." = "“Enable access for assistive devices” must also\n be enabled in macOS’s %1$@ preferences.";
 
 /* A DOSBox configuration file was provided that defines drives with paths that cannot be found. */
 "A DOSBox configuration file was provided that defines drives with paths that cannot be found." = "A DOSBox configuration file was provided that defines drives with paths that cannot be found.";
