Fix missing SHELL_CMD_DIR_VOLUME string.

--- a/Resources/Base.lproj/DOSBox.strings
+++ b/Resources/Base.lproj/DOSBox.strings
@@ -462,6 +462,9 @@ in the [1;32mDrives[0m menu.
 //DIR-related strings
 //-------------------
 
+"SHELL_CMD_DIR_VOLUME" = "Volume in drive %c is %s
+";
+
 "SHELL_CMD_DIR_INTRO" = "Contents of folder %s
 ";
 
