--- a/Resources/cs.lproj/Localizable.strings
+++ b/Resources/cs.lproj/Localizable.strings
@@ -435,7 +435,7 @@ na vlastních osách.";
 "MS-DOS is limited to a maximum of %1$d CD-ROM drives." = "Maximální počet CD mechanik je v MS-DOSu omezen na %1$d.";
 
 /* Error message shown when user tries to mount a system folder as a DOS drive. %@ is the requested folder path. */
-"MS-DOS is not permitted to access OS X system folders like “%@”." = "MS-DOSu není dovoleno přistupovat k systémovým složkám macOS, jako je “%@”.";
+"MS-DOS is not permitted to access OS X system folders like \"%@\"." = "MS-DOSu není dovoleno přistupovat k systémovým složkám macOS, jako je “%@”.";
 
 /* Menu item title for switching to the selected drive in DOS. */
 "Make Current Drive" = "Přepnout na disk";
@@ -799,16 +799,16 @@ Přetáhněte sem prosím náhradní ROM.";
 "“%1$@” requires extra files that are currently unavailable." = "“%1$@” vyžaduje další soubory, které jsou momentálně nedostupné.";
 
 /* Error message shown when importing a folder with no executables in it. %@ is the display filename of the imported folder. */
-"“%@” does not contain any MS-DOS programs." = "“%@” neobsahuje žádný program pro MS-DOS.";
+"\"%@\" does not contain any MS-DOS programs." = "“%@” neobsahuje žádný program pro MS-DOS.";
 
 /* Error message shown when importing a folder that contains a Mac game. %@ is the display filename of the imported path. */
-"“%@” is a Mac OS game. Boxer only supports MS-DOS games." = "“%@” je hra pro Mac OS. Boxer podporuje pouze hry pro MS-DOS.";
+"\"%@\" is a Mac OS game. Boxer only supports MS-DOS games." = "“%@” je hra pro Mac OS. Boxer podporuje pouze hry pro MS-DOS.";
 
 /* Error message shown when importing a hybrid Mac/PC CD. %@ is the display filename of the imported path. */
-"“%@” is a Mac+PC hybrid disc, which Boxer cannot import." = "“%@” je hybridní disk Mac+PC, který Boxer nedokáže naimportovat.";
+"\"%@\" is a Mac+PC hybrid disc, which Boxer cannot import." = "“%@” je hybridní disk Mac+PC, který Boxer nedokáže naimportovat.";
 
 /* Error message shown when importing a folder that contains a Windows-only game or Windows installer. %@ is the display filename of the imported path. */
-"“%@” is a Windows game. Boxer only supports MS-DOS games." = "“%@” je hra pro Windows. Boxer podporuje pouze hry pro MS-DOS.";
+"\"%@\" is a Windows game. Boxer only supports MS-DOS games." = "“%@” je hra pro Windows. Boxer podporuje pouze hry pro MS-DOS.";
 
 /* Title of warning sheet after running a Windows-only executable. %@ is the original filename of the executable. */
 "“%@” is a Windows program. Boxer only supports MS-DOS programs." = "“%@” je program pro Windows. Boxer podporuje pouze programy pro MS-DOS.";
