--- a/Resources/es.lproj/Localizable.strings
+++ b/Resources/es.lproj/Localizable.strings
@@ -435,7 +435,7 @@ en ejes separados.";
 "MS-DOS is limited to a maximum of %1$d CD-ROM drives." = "MS-DOS está limitado a un máximo de %1$d unidades de CD-ROM.";
 
 /* Error message shown when user tries to mount a system folder as a DOS drive. %@ is the requested folder path. */
-"MS-DOS is not permitted to access OS X system folders like “%@”." = "MS-DOS no está permitido acceder a la carpetas de sistema macOS como “%@”.";
+"MS-DOS is not permitted to access OS X system folders like \"%@\"." = "MS-DOS no está permitido acceder a la carpetas de sistema macOS como “%@”.";
 
 /* Menu item title for switching to the selected drive in DOS. */
 "Make Current Drive" = "Hacer unidad actual";
@@ -799,16 +799,16 @@ Por favor arrastre las nuevas ROMs para reemplazarlas.";
 "“%1$@” requires extra files that are currently unavailable." = "“%1$@” necesita archivos extra que actualmente no están disponibles.";
 
 /* Error message shown when importing a folder with no executables in it. %@ is the display filename of the imported folder. */
-"“%@” does not contain any MS-DOS programs." = "“%@” no contiene programas MS-DOS.";
+"\"%@\" does not contain any MS-DOS programs." = "“%@” no contiene programas MS-DOS.";
 
 /* Error message shown when importing a folder that contains a Mac game. %@ is the display filename of the imported path. */
-"“%@” is a Mac OS game. Boxer only supports MS-DOS games." = "“%@” es un juego de Mac OS. Boxer solo soporta juegos MS-DOS.";
+"\"%@\" is a Mac OS game. Boxer only supports MS-DOS games." = "“%@” es un juego de Mac OS. Boxer solo soporta juegos MS-DOS.";
 
 /* Error message shown when importing a hybrid Mac/PC CD. %@ is the display filename of the imported path. */
-"“%@” is a Mac+PC hybrid disc, which Boxer cannot import." = "“%@” es un disco híbrido Mac+PC, que Boxer no puede importar.";
+"\"%@\" is a Mac+PC hybrid disc, which Boxer cannot import." = "“%@” es un disco híbrido Mac+PC, que Boxer no puede importar.";
 
 /* Error message shown when importing a folder that contains a Windows-only game or Windows installer. %@ is the display filename of the imported path. */
-"“%@” is a Windows game. Boxer only supports MS-DOS games." = "“%@” es un juego de Windows. Boxer solo soporta juegos de MS-DOS.";
+"\"%@\" is a Windows game. Boxer only supports MS-DOS games." = "“%@” es un juego de Windows. Boxer solo soporta juegos de MS-DOS.";
 
 /* Title of warning sheet after running a Windows-only executable. %@ is the original filename of the executable. */
 "“%@” is a Windows program. Boxer only supports MS-DOS programs." = "“%@” es un programa Windows. Boxer solo soporta programas MS-DOS.";
